# ex_bgfx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml  mix.exs
CMake/Module/: FindGLFW.cmake  FindSDL2.cmake
c_src/: bgfx_entry.hpp  bgfx_nif.c  bgfx_nif.cpp
config/: config.exs
dep/: CMakeLists.txt
lib/: bgfx.ex  ex_bgfx.ex
lib/bgfx/: nif.ex
test/: bgfx_test.exs  ex_bgfx_test.exs
